# silisizer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: Silisizer.cpp  Silisizer.h  Silisizer.i  Silisizer.tcl  SilisizerAPI.h  main.cpp
src/tcl/: tclreadlineCompleter.tcl  tclreadlineEmbedInit.tcl  tclreadlineSetup.tcl
tests/: CMakeLists.txt
tests/chained_adder_timed/: silisize.tcl
tests/common/: Readme.md
tests/picorv32/: .gitignore  librelane.yml  silisize.tcl  test
tests/tclreadline/: test  test_tclreadline.tcl
